--- a/scripts/cross-sectional_2012_alc_dementia.Rmd
+++ b/scripts/cross-sectional_2012_alc_dementia.Rmd
@@ -16,7 +16,7 @@ library(ggsankey)
 library(gtsummary)
 library(haven)
 library(here)
-library(PRISMAstatement)
+#library(PRISMAstatement)
 library(rsvg)  # for saving svg
 library(tidymodels)
 library(tidyverse)
