--- a/scripts/alc_dem_sample_descriptions.Rmd
+++ b/scripts/alc_dem_sample_descriptions.Rmd
@@ -18,7 +18,6 @@ library(webshot2) # For flextable image export
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-as.data.frame is ESSENTIAL for ivglm to accept these as valid data inputs
 ```{r}
 # dat.start represents genetics-confirmed 2012 wave without exclusion yet
 dat.start <- readRDS(here("data", "analytic", "genetics_confirmed_2012_2022-09-18.rda"))
@@ -27,15 +26,16 @@ ancestry.aa <- dat.start %>% filter(RACE == "Non-Hispanic Black, African ancestr
 
 #TODO why is this formatting here
 # dat represents analytic sample starting with genetics-confirmed 2012 wave ancestry
-#dat <- readRDS(here("data", "analytic", "2022-09-18.gscan.dpw.1smr.xs.rda")) %>% as_tibble(.name_repair = "universal") %>% mutate(DEGREE = factor(DEGREE))
+dat <- readRDS(here("data", "analytic", "2022-09-18.gscan.dpw.1smr.xs.rda")) %>% as_tibble(.name_repair = "universal") %>% mutate(DEGREE = factor(DEGREE))
 
-dat <- readRDS(here("data", "analytic", "2022-12-09.current.consumption.gscan.dpw.1smr.xs.rda"))
+#dat <- readRDS(here("data", "analytic", "2022-12-09.current.consumption.gscan.dpw.1smr.xs.rda"))
 
 dat.ea <- dat %>% filter(RACE == "Non-Hispanic White, European ancestry") %>%  as.data.frame()
 dat.aa <- dat %>% filter(RACE == "Non-Hispanic Black, African ancestry") %>% as.data.frame()
 ```
 
 # Tbl_summary setup
+Summary labels for input into gtsummary
 ```{r}
 tbl_summary_labels <-
   list(
@@ -59,6 +59,7 @@ tbl_summary_labels <-
       R11SAYRET ~ "Retirement status"
       )
 
+# Recode certain variables as continuous that were mistakenly interpreted as categorical
 tbl_summary_types <-
   list( 
     #R11DRINKN ~ "continuous",
@@ -69,6 +70,7 @@ tbl_summary_types <-
   )
 ```
 
+Helper code to organize different categories of covariates for easier wrangling later
 ```{r}
 ancestryPCs <- c("AncestryPC_1_5A", "AncestryPC_1_5B", "AncestryPC_1_5C", "AncestryPC_1_5D", "AncestryPC_1_5E")
 demographics <- c("NAGE", "GENDER", "DEGREE", "APOE012")
@@ -83,7 +85,8 @@ dat.univar <-
 ```
 
 # Univariate Table
-```{r}
+Primary gtsummary function to output univariate descriptives
+```{r output_univar_table}
 univar.table <- 
   dat.univar %>%
   tbl_summary(
@@ -100,6 +103,8 @@ univar.table
 #univar.table %>% as_flex_table %>% save_as_docx(path = here("results", "analytic", paste0(Sys.Date(), "_univar_by_race.docx")))
 
 #univar.table %>% as_flex_table %>% save_as_image(path = here("results", "analytic", paste0(Sys.Date(), "_univar_by_ancestry.png")), webshot = "webshot2")
+
+#univar.table %>% as_flex_table %>% save_as_pptx(path = here("results", "analytic", paste0(Sys.Date(), "_univar_by_ancestry.pptx")))
 ```
 
 ```{r}
